--- a/angular.json
+++ b/angular.json
@@ -39,9 +39,10 @@
               }
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/theme.less",
               "src/styles.scss",
-              "./node_modules/ng-zorro-antd/ng-zorro-antd.min.css"
+              "src/theme-custom.scss"
             ],
             "scripts": [
               "src/fontawesome/all.js"
@@ -106,6 +107,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
             "scripts": []
